--- a/cloudapp/src/app/main/main.component.html
+++ b/cloudapp/src/app/main/main.component.html
@@ -37,6 +37,7 @@
     (executeJob)="executeJob()"
     (removeJobParameter)="removeJobParameter($event)"
     (updateJobParameter)="updateJobParameter($event.id, $event.value)"
+    (resetJob)="resetJob()"
   ></app-job-parameters>
 
   <app-job-menu
