changed 'delete-all' confirmation execution to primary color;  removed legacy error message in main html;  added 'users with notes' summary to selected set card;  ran eca build;

--- a/cloudapp/src/app/main/operation-selector/operation-selector.component.html
+++ b/cloudapp/src/app/main/operation-selector/operation-selector.component.html
@@ -19,7 +19,7 @@
       <mat-card-actions class="action-row mt-16 pad-16">
         <button mat-flat-button color="secondary" [disabled]="processingNotes" (click)="onCancelDeleteAll()" tabindex="0">Cancel</button>
         <span class="flex-spacer"></span>
-        <button mat-flat-button color="secondary" [disabled]="processingNotes" (click)="onExecuteDeleteAll()" tabindex="-1">Yes, Delete All Notes</button>
+        <button mat-flat-button color="primary" [disabled]="processingNotes" (click)="onExecuteDeleteAll()" tabindex="-1">Yes, Delete All Notes</button>
       </mat-card-actions>
     </mat-card>
     </mat-card-content>
